--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>CanWeGoNow</title>
+  <title>90 Percent</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.css' rel='stylesheet' />
